--- a/css/default.css
+++ b/css/default.css
@@ -1,4 +1,31 @@
 body{
-	
+	background-color: #f8f8f8;
+	font-family: sans-serif;
+	font-size: 10px;
+	margin: 0px;
+}
+
+.banner{
+	background-image: url(banner.png);
+	background-repeat: repeat-x;
+	height: 80px;
+	color: white;
+	font-family: inherit;
+	font-size: 24px;
+	text-align: left;
+	vertical-align: middle;
+	padding-left: 10px;
+}
+
+.menu{
+	background-image: url(menu.png);
+	background-repeat: repeat-x;
+	height: 20px;
+	color: black;
+	font-family: inherit;
+	font-size: 12px;
+	text-align: left;
+	vertical-align: middle;
+	padding-left: 10px;
 }
 
